--- a/src/ui/components/projects/components/project/project.module.scss
+++ b/src/ui/components/projects/components/project/project.module.scss
@@ -7,13 +7,10 @@
   border: 1px solid var(--color-lightgray);
   padding: 10px;
   border-radius: 4px;
-  transition:
-    border-color 0.3s ease-in-out,
-    background-color 0.3s ease-in-out,
-    box-shadow 0.45s linear;
+  transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover {
-    box-shadow: 0 0 4px var(--color-link);
+    box-shadow: 0 0 8px var(--color-link);
   }
 
   [data-theme='dark'] & {
